[gd_scene load_steps=4 format=3 uid="uid://cxwbcxmgttpop"]

[ext_resource type="Script" path="res://Scenes/SettingsMenu.gd" id="1_0degr"]
[ext_resource type="Script" path="res://scripts/volume.gd" id="2_x8ld1"]
[ext_resource type="AudioStream" uid="uid://g2y8aopg644v" path="res://jump.wav" id="3_6ogrf"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0degr")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
offset_left = 1.0
offset_top = -1.0
offset_right = 1280.0
offset_bottom = 720.0
tab_alignment = 1

[node name="Video" type="TabBar" parent="TabContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="TabContainer/Video"]
layout_mode = 0
offset_left = 488.0
offset_top = 473.0
offset_right = 714.0
offset_bottom = 550.0
text = "CLOSE"

[node name="CheckButton" type="CheckButton" parent="TabContainer/Video"]
layout_mode = 0
offset_left = 519.0
offset_top = 210.0
offset_right = 563.0
offset_bottom = 234.0

[node name="Label" type="Label" parent="TabContainer/Video/CheckButton"]
layout_mode = 0
offset_left = -159.0
offset_right = -32.0
offset_bottom = 23.0
text = "Fullscreen Mode"

[node name="OptionButton" type="OptionButton" parent="TabContainer/Video"]
layout_mode = 0
offset_left = 530.0
offset_top = 268.0
offset_right = 657.0
offset_bottom = 299.0
item_count = 4
selected = 3
popup/item_0/text = "2560x1440"
popup/item_0/id = 1
popup/item_1/text = "1920x1080"
popup/item_1/id = 2
popup/item_2/text = "1366x768"
popup/item_2/id = 2
popup/item_3/text = "1280x720"
popup/item_3/id = 3

[node name="Label" type="Label" parent="TabContainer/Video/OptionButton"]
layout_mode = 0
offset_left = -163.0
offset_top = 3.0
offset_right = -123.0
offset_bottom = 26.0
text = "Resolution"

[node name="Audio" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="master" type="HSlider" parent="TabContainer/Audio"]
layout_mode = 0
offset_left = 400.0
offset_top = 300.0
offset_right = 735.0
offset_bottom = 316.0
max_value = 1.0
step = 0.05
value = 0.5
script = ExtResource("2_x8ld1")
bus_name = "Master"

[node name="Label" type="Label" parent="TabContainer/Audio/master"]
layout_mode = 0
offset_left = 118.0
offset_top = -23.0
offset_right = 236.0
text = "Master Volume
"

[node name="music" type="HSlider" parent="TabContainer/Audio"]
layout_mode = 0
offset_left = 400.0
offset_top = 399.0
offset_right = 736.0
offset_bottom = 415.0
max_value = 1.0
step = 0.05
value = 0.5
script = ExtResource("2_x8ld1")
bus_name = "music"

[node name="Label" type="Label" parent="TabContainer/Audio/music"]
layout_mode = 0
offset_left = 110.0
offset_top = -23.0
offset_right = 228.0
text = "Music Volume
"

[node name="sfx" type="HSlider" parent="TabContainer/Audio"]
layout_mode = 0
offset_left = 400.0
offset_top = 486.0
offset_right = 746.0
offset_bottom = 502.0
max_value = 1.0
step = 0.05
value = 0.5
script = ExtResource("2_x8ld1")
bus_name = "sfx"

[node name="Label" type="Label" parent="TabContainer/Audio/sfx"]
layout_mode = 0
offset_left = 129.0
offset_top = -26.0
offset_right = 220.0
offset_bottom = -3.0
text = "SFX Volume
"

[node name="Button" type="Button" parent="TabContainer/Audio"]
layout_mode = 0
offset_left = 515.0
offset_top = 547.0
offset_right = 633.0
offset_bottom = 610.0
text = "CLOSE"

[node name="Button2" type="Button" parent="TabContainer/Audio"]
layout_mode = 0
offset_left = 477.0
offset_top = 167.0
offset_right = 637.0
offset_bottom = 247.0
text = "PLAY"

[node name="Controls" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="Button" type="Button" parent="TabContainer/Controls"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -6.0
offset_right = 226.0
offset_bottom = 71.0
grow_vertical = 0
text = "CLOSE"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_6ogrf")
bus = &"sfx"

[connection signal="pressed" from="TabContainer/Video/Button" to="." method="_on_button_pressed"]
[connection signal="ready" from="TabContainer/Video/CheckButton" to="." method="_on_check_button_ready"]
[connection signal="toggled" from="TabContainer/Video/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="item_selected" from="TabContainer/Video/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="TabContainer/Audio/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="TabContainer/Audio/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="TabContainer/Controls/Button" to="." method="_on_button_pressed"]
